ENABLE_TESTING()

SET(CMAKE_MODULE_PATH $ENV{CMAKE_MODULE_PATH})
INCLUDE(Site)
INCLUDE(UseBoost)

INCLUDE_DIRECTORIES(
  ../../../Sources/C++
)
SET(TEST_SOURCES
  PlusTest.cc
  Test.cc
)
ADD_EXECUTABLE(testRanally
  ${TEST_SOURCES}
)
TARGET_LINK_LIBRARIES(testRanally
  ${BOOST_UNIT_TEST_FRAMEWORK_LIBRARY}
)
CONFIGURE_TEST(testRanally)
ADD_TEST(testRanally ${EXECUTABLE_OUTPUT_PATH}/testRanally)
