ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(gdal)
ADD_SUBDIRECTORY(fern)
# ADD_SUBDIRECTORY(hdf5)
# ADD_SUBDIRECTORY(netcdf)
# ADD_SUBDIRECTORY(ogr)
# ADD_SUBDIRECTORY(uncertml2)

SET(SOURCES
    drivers
    io_client
)
ADD_LIBRARY_AND_OBJECT_LIBRARY(fern_io ${SOURCES})
TARGET_LINK_LIBRARIES(fern_io
    fern_io_gdal
    fern_io_fern
)
